# rust-k8s-controller

./: Cargo.toml  LICENSE.txt  README.md
docs/: book.yaml  crd.yaml
src/: main.rs
